//
// Copyright 2018 Peter Vrenken.
syntax = "proto3";
import "Clients/_Grpc/_Model.proto";
package EtAlii.Ubigia.Api.Transport.Management.Grpc.WireProtocol;

// The Storage Grpc service definition.
service StorageGrpcService  
{
    rpc GetSingle (StorageSingleRequest) returns (StorageSingleResponse) {}
    rpc GetMultiple (StorageMultipleRequest) returns (stream StorageMultipleResponse) {}
	rpc GetLocal (StorageSingleRequest) returns (StorageSingleResponse) {}
	rpc Post (StorageSingleRequest) returns (StorageSingleResponse) {}
	rpc Put (StorageSingleRequest) returns (StorageSingleResponse) {}
	rpc Delete (StorageSingleRequest) returns (StorageSingleResponse) {}
}

message StorageSingleRequest
{
    oneof Selection 
    {
        Guid Id = 1;
        string Name = 2;
        Storage Storage = 3;        
    }
}

message StorageMultipleRequest
{
}

message StorageSingleResponse
{
	Storage Storage = 1;
}

message StorageMultipleResponse
{
    Storage Storage = 1;
}
